--- a/game.css
+++ b/game.css
@@ -10,8 +10,8 @@ body {
 }
 
 canvas {
-    box-shadow: gray 10px 10px 10px;
-    border: 2px solid greenyellow;
+    box-shadow: black 0 0 20px;
+    border: 5px solid greenyellow;
 }
 
 button {
